# legismex

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  SPEC.md  TUTORIAL.md  get_sucuri.py  historico_output.html  index.html  mkdocs.yml  parse_campeche_gaceta_test.py  parse_campeche_po_test.py  parse_legisver_test.py  parse_tabasco_iniciativas_test.py  parse_tabasco_po_test.py  parse_tamaulipas_po_test.py  pyproject.toml  tamaulipas_65.html  test_chiapas_po.py  test_edomex_po.py  test_jalisco_api.py  test_nuevoleon_po.py  test_po.html  test_sanluis.py  test_sanluis_po.py  test_tamaulipas.py  test_tamaulipas_po.py  test_veracruz.py  verify.py
contributing/: index.html
docs/: contributing.md  excepciones.md  index.md  modelos.md  tutorial.md
excepciones/: index.html
modelos/: index.html
search/: search_index.json
tests/: get_sucuri.py  parse_campeche_gaceta_test.py  parse_campeche_po_test.py  parse_chiapas_po_test.py  parse_legisver_test.py  parse_qroo_test.py  parse_tabasco_iniciativas_test.py  parse_tabasco_po_search_test.py  parse_tabasco_po_test.py  parse_tamaulipas_po_test.py  parse_tamaulipas_test.py  parse_veracruz_po_test.py  test_bcs_congreso.py  test_campeche.py  test_campeche_po.py  test_chiapas_po.py  test_colima.py  test_colima_po.py  test_consejeria_api.py  test_edomex.py  test_edomex_po.py  test_exceptions_wrap.py  test_jalisco_api.py  test_jalisco_po_api.py  test_nayarit_congreso.py  test_nayarit_po.py  test_nuevoleon.py  test_nuevoleon_po.py  test_qroo.py  test_qroo_po.py  test_sanluis.py  test_sanluis_po.py  test_sil.py  test_sinaloa.py  (+55 more)
(+220 files in other folders)
