[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "legismex"
version = "1.0.2"
description = "Biblioteca en Python para facilitar el trabajo legislativo en México (SIL, Cámara de Diputados, Senado, etc.)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Michel Cano"},
]
dependencies = [
    "httpx",
    "beautifulsoup4",
    "pydantic",
    "lxml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
]
consejeria = [
    "playwright>=1.40.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/legismex"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
